--- a/src/app/components/panel/panel-left/panel-left.component.html
+++ b/src/app/components/panel/panel-left/panel-left.component.html
@@ -1,9 +1,39 @@
 <div class="flex menu">
   <div class="image-container flex flex-center">
     <img src="../../../../assets/images/logotipo.png" alt="logotipo do nova software" />
-    <span>Nova software spotify</span>
+  </div>
+  <div class="menu-container flex options">
+    <app-button-panel [description]="'Inicio'" [selectButton]="selectMenu === 'Inicio'" (click)="buttonClick('Inicio')">
+      <fa-icon [icon]="homeIcone"></fa-icon>
+    </app-button-panel>
+    <app-button-panel [description]="'Pesquisar'" [selectButton]="selectMenu === 'Pesquisar'"
+      (click)="buttonClick('Pesquisar')">
+      <fa-icon [icon]="searchIcone"></fa-icon>
+    </app-button-panel>
+    <app-button-panel [description]="'Artistas'" [selectButton]="selectMenu === 'Artistas'"
+      (click)="buttonClick('Artistas')">
+      <fa-icon [icon]="artistIcone"></fa-icon>
+    </app-button-panel>
+  </div>
+  <div class="menu-container flex">
+    <span class="playlist-title">
+      PLAYLISTS
+    </span>
+
+    <div class="playlist-scroll">
+      <app-button-panel
+        *ngFor="let playlist of playlists"
+        [description]="playlist.name"
+        [selectButton]="selectMenu === playlist.id"
+        (click)="goToPlaylist(playlist.id)"
+        >
+        <fa-icon
+          [icon]="playlistIcone"
+        ></fa-icon>
+      </app-button-panel>
+
+    </div>
   </div>
 </div>
 <div class="user-info">
-
 </div>
