--- a/src/app/components/panel/panel-left/panel-left.component.scss
+++ b/src/app/components/panel/panel-left/panel-left.component.scss
@@ -3,6 +3,9 @@
 $h-spotify-logo: 120px;
 $h-menu-options: 150px;
 $m-between-menu: 10px;
+$h-footer-user: 70px;
+
+$h-disregard: calc($h-spotify-logo + $h-menu-options + $h-footer-user);
 
 :host {
   max-width: 300px;
@@ -61,12 +64,26 @@ $m-between-menu: 10px;
 
       .playlist-scroll {
         width: 100%;
-        color: $white-900;
+        max-height: calc(95vh - $h-disregard);
+        overflow-y: auto;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
 
         * {
           margin-bottom: $m-between-menu;
         }
       }
     }
+  }
+
+  .user-info {
+    flex-grow: 0;
+    display: block;
+    bottom: 0;
+    align-self: flex-end;
+    height: $h-footer-user;
+    width: 100%;
   }
 }
