refactor: dividing the responsibilities of each class

--- a/src/app/components/panel/user/footer-user/footer-user.component.html
+++ b/src/app/components/panel/user/footer-user/footer-user.component.html
@@ -3,5 +3,5 @@
   <span>
     {{ user.name }}
   </span>
-  <fa-icon class="closedIcon" [icon]="closedIcon"></fa-icon>
+  <fa-icon class="closedIcon" [icon]="closedIcon" (click)="logout()"></fa-icon>
 </div>
