fix: aadding default table style and also fixing bugs

--- a/src/app/components/panel/top-artist/top-artist.component.html
+++ b/src/app/components/panel/top-artist/top-artist.component.html
@@ -1,9 +1,11 @@
-<div class="card p-20">
-  <div class="artists flex">
-    <span class="title-bg">
-      {{ topArtists.name }}
-    </span>
-  </div>
-  <div class="image" [style.background-image]="'url(' + topArtists.avatarUrl + ')'">
+<div class="card-container">
+  <div class="card p-20">
+    <div class="artists flex">
+      <span class="title-bg">
+        {{ topArtists }}
+      </span>
+    </div>
+    <div class="image" [style.background-image]="'url(' + topArtists.avatarUrl + ')'">
+    </div>
   </div>
 </div>
