--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="my-musics">
+<div class="my-music">
   <span class="title-bg mt-4">
     Seu Top Artista
   </span>
@@ -15,24 +15,22 @@
         <th class="w-5">#</th>
         <th class="w-35">Titulo</th>
         <th class="w-30">Artista</th>
-        <th class="w-10 direita">Tempo</th>
+        <th class="w-10 right">Tempo</th>
         <th class="w-20">Album</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let music of musics" (click)="executeMusic(music)" [class.executando]="music.id === currentMusic.id">
+      <tr *ngFor="let music of musics" (click)="executeMusic(music)" [class.execute]="music.id === currentMusic.id">
         <td>
           <fa-icon class="play" [icon]="playIcone"></fa-icon>
         </td>
         <td>{{ music.title }}</td>
         <td>{{ getArtist(music) }}</td>
-        <td class="direita">{{ music.temp }}</td>
+        <td class="right">{{ music.temp }}</td>
         <td>{{ music.album.name }}</td>
       </tr>
     </tbody>
   </table>
-
 </div>
 
-<app-panel-right class="right-panel">
-</app-panel-right>
+<app-panel-right class="right-panel"></app-panel-right>
