--- a/src/assets/styles/helpers/__base.scss
+++ b/src/assets/styles/helpers/__base.scss
@@ -19,3 +19,37 @@ body {
     justify-content: center;
   }
 }
+
+.title {
+  color: $green-700;
+  display: block;
+  font-weight: 700;
+
+  &-bg {
+    @extend .title;
+    font-size: 2.2rem;
+  }
+
+  &-md {
+    @extend .title;
+    font-size: 1.4rem;
+  }
+}
+
+.mt {
+  @for $i from 1 to 10 {
+    &-#{ $i } {
+      margin-top: #{ $i }vh;
+    }
+  }
+}
+
+.p-20 {
+  padding: 20px;
+}
+
+.card {
+  box-shadow: 0px 0px 15px $black-transparent-20;
+  background-color: $white-900;
+  border-radius: 10px;
+}
