--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -24,7 +24,7 @@
   thead th {
     font-size: .75rem;
     font-weight: 600;
-    color: $black-transparent-20;
+    color: $black-900;
   }
 
   th,
@@ -53,7 +53,7 @@
       margin-top: 10px;
       font-weight: 500;
       font-size: .85rem;
-      color: $black-transparent-20;
+      color: $black-900;
 
       &:nth-child(1) {
         padding-left: 10px;
