fix: top artist

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="my-music">
-  <span class="title-bg mt-4">
+  <!-- <span class="title-bg mt-4">
     Seu Top Artista
-  </span>
+  </span> -->
 
   <app-top-artist class="mt-2 d-block"></app-top-artist>
 
