--- a/src/app/components/panel/top-artist/top-artist.component.html
+++ b/src/app/components/panel/top-artist/top-artist.component.html
@@ -1,11 +1,11 @@
-<div class="card-container">
+<!-- <div class="card-container">
   <div class="card p-20">
     <div class="artists flex">
       <span class="title-bg">
-        {{ topArtists }}
+        {{ topArtists.name }}
       </span>
     </div>
     <div class="image" [style.background-image]="'url(' + topArtists.avatarUrl + ')'">
     </div>
   </div>
-</div>
+</div> -->
