--- a/src/app/components/panel/top-artist/top-artist.component.scss
+++ b/src/app/components/panel/top-artist/top-artist.component.scss
@@ -1,38 +1,38 @@
-:host {
+// @import "../../../../assets/styles/helpers/_color-variable";
 
-  .card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-bottom: 20px;
-  }
 
-  .artist {
-    flex: 0 1 calc(25% - 10px);
-    position: relative;
-    overflow: hidden;
-    height: 200px;
-  }
+// .card {
+//   height: 200px;
+//   position: relative;
+//   overflow: hidden;
 
-  .image {
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
+//   .artist {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     z-index: 1;
+//     padding: 10px 30px;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: flex-start;
+//   }
 
-  .artists {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    z-index: 1;
-  }
+//   .image {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     height: 100%;
+//     width: 100%;
+//     background-position: center;
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//     opacity: .4;
+//     z-index: 0;
+//   }
 
-  span {
-    color: $white-900;
-  }
-}
+//   span {
+//     text-shadow: 2px 2px 10px $white;
+//   }
+// }
