theEnd: add artist image and top artist

--- a/src/app/components/panel/panel-right/panel-right.component.html
+++ b/src/app/components/panel/panel-right/panel-right.component.html
@@ -1,1 +1,3 @@
-
+<app-search-recent></app-search-recent>
+<app-top-artist class="mt-5"></app-top-artist>
+<app-player-card class="mt-5"></app-player-card>
